Adicionando logo a minha navbar

--- a/index.html
+++ b/index.html
@@ -19,9 +19,11 @@
         <nav class="navbar">
             <div class="logo">
 
+                <img src="imagens/logoPizza.png" alt="logo pizzaria" class="logoFoto">
                 <h1>Pizzaria do Zé</h1>
 
             </div>
+
 
             <ul class="nav-links-desktop">
 
