--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
         <title>Pizzaria do Zé</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="assets/css/style.css">
         <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"/>
-        <script src="js/scrpty.js" defer></script>
+        <script src="assets/js/scrpty.js" defer></script>
     </head>
 
     <body>
@@ -19,7 +19,7 @@
         <nav class="navbar">
             <div class="logo">
 
-                <img src="imagens/logoPizza.png" alt="logo pizzaria" class="logoFoto">
+                <img src="assets/img/logoPizza.png" alt="logo pizzaria" class="logoFoto">
                 <h1>Pizzaria do Zé</h1>
 
             </div>
