--- a/index.html
+++ b/index.html
@@ -11,55 +11,76 @@
         <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"/>
+      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
         <script src="assets/js/scrpty.js" defer></script>
     </head>
 
     <body>
+        <header>
+            <nav class="navbar">
+                <div class="logo">
 
-        <nav class="navbar">
-            <div class="logo">
+                    <img src="assets/img/logoPizza.png" alt="logo pizzaria" class="logoFoto">
+                    <h1>PizzaPlata</h1>
 
-                <img src="assets/img/logoPizza.png" alt="logo pizzaria" class="logoFoto">
-                <h1>Pizzaria do Zé</h1>
-
-            </div>
+                </div>
 
 
-            <ul class="nav-links-desktop">
-
-                <li><a href="#">Cardápio</a></li>
-                <li><a href="#">Sobre Nós</a></li>
-                <li><a href="#">Pedido</a></li>
-
-            </ul>
-
-            <div class="mobile-menu" id="mobileMenu">
-
-                <button class="close"  id="closeButton">
-                    <i class="fas fa-times"></i>
-                </button>
-
-                <ul class="nav-links-mobile">
+                <ul class="nav-links-desktop">
 
                     <li><a href="#">Cardápio</a></li>
                     <li><a href="#">Sobre Nós</a></li>
                     <li><a href="#">Pedido</a></li>
+                    <li><a href="#"><i class="instagram"></i></a></li>
 
                 </ul>
 
+                <div class="mobile-menu" id="mobileMenu">
+
+                    <button class="close"  id="closeButton">
+                        <i class="fas fa-times"></i>
+                    </button>
+
+                    <ul class="nav-links-mobile">
+
+                        <li><a href="#">Cardápio</a></li>
+                        <li><a href="#">Sobre Nós</a></li>
+                        <li><a href="#">Pedido</a></li>
+
+                    </ul>
+
                 
 
-            </div>
+                </div>
 
-            <button class="hamburguer" id="hamburguerButton">
-                <i class="fas fa-bars"></i>
-            </button>
+                <button class="hamburguer" id="hamburguerButton">
+                    <i class="fas fa-bars"></i>
+                </button>
 
             
 
 
 
-        </nav>
+            </nav>
+        </header>
+
+        <section class="primeiraSecao">
+
+            <div class="conteudo-principal">
+
+                <h1>Peça na Pizzaria mais saborosa do Brasil!</h1>
+                <h2>Pizzas Recheadas</h2>
+
+                <div class="butaoPrincipal">
+
+                    <button class="reservar">Faça seu Pedido</button>
+                    <button class="montar">Monte seu Pedido</button>
+
+                </div>
+
+            </div>
+
+        </section>
 
     </body>
 
