Criando botões da minha secção

--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
                     <li><a href="#">Cardápio</a></li>
                     <li><a href="#">Sobre Nós</a></li>
                     <li><a href="#">Pedido</a></li>
-                    <li><a href="#"><i class="instagram"></i></a></li>
+                    <li><a href="#">Contatos</a></li>
+                    <li><a href="#"><i class="bi bi-instagram"></i></a></li>
 
                 </ul>
 
@@ -69,7 +70,7 @@
             <div class="conteudo-principal">
 
                 <h1>Peça na Pizzaria mais saborosa do Brasil!</h1>
-                <h2>Pizzas Recheadas</h2>
+                <h2>Pizzas Super Recheadas</h2>
 
                 <div class="butaoPrincipal">
 
